--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   schedule:
     # Runs at 12am UTC-5
-    - cron: '0 5 * * *'
+    - cron: '0 5 * * 1'
 
 jobs:
   update-readme:
