--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -11,7 +11,8 @@ jobs:
     name: Update this repo's README
     runs-on: ubuntu-latest
     steps:
-      - uses: athul/waka-readme@master
+      - uses: athul/waka-readme@v0.1.5
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           SHOW_TITLE: true
+          BLOCKS: ▁▂▃▅▆▇
