--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -15,15 +15,5 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           SHOW_TITLE: true
-          # Progress
-          #BLOCKS: ⣀⣄⣤⣦⣶⣷⣿ # dots1 (7)
-          #BLOCKS: ⣀⣄⣆⣇⣧⣷⣿ # dots2 (7)
-          #BLOCKS: ▁▃▅▇      # bars1 (4)
-          #BLOCKS: ☷☳☱☰      # lines1 (4)
-          #BLOCKS: ▕▏▎▍▋▊▉    # bars2 (7) (:bug: not horizontally equals)
-
-          # Binary
-          BLOCKS: ▱▰        # rectangles1
-          #BLOCKS: ⬜⬛       # squares1 (2)
-          #BLOCKS: ◻️◼️         # squares2 (2)
-          #BLOCKS: ⚪⚫ # circles1 (2)
+          # Options in IGNOREME.md file
+          BLOCKS: ▱▰
