--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -16,4 +16,4 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           SHOW_TITLE: true
           # Options in IGNOREME.md file
-          BLOCKS: ▱▰
+          BLOCKS: ⠀⡀⡄⡆⡇⣇⣧⣷⣿
