--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -11,9 +11,10 @@ jobs:
     name: Update this repo's README
     runs-on: ubuntu-latest
     steps:
-      - uses: athul/waka-readme@v0.1.5
+      - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           SHOW_TITLE: true
+          TIME_RANGE: last_30_days
           # Options in IGNOREME.md file
           BLOCKS: ⡀⡄⡆⡇⣇⣧⣷⣿
