--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -3,8 +3,8 @@ name: Waka Readme
 on:
   workflow_dispatch:
   schedule:
-    # Runs at 12am UTC-5
-    - cron: '0 5 * * 1'
+    # Each month
+    - cron: '0 0 1 * *'
 
 jobs:
   update-readme:
