--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           SHOW_TITLE: true
-          TIME_RANGE: last_30_days
+          TIME_RANGE: last_6_months
           SHOW_TIME: false
           CODE_LANG: rust
           LANG_COUNT: 7
